feat: Improving Controllers with more detailed search endpoints
